# online_game

./: .gitignore  LICENSE  Makefile  go.mod  go.sum  readme.md
cmd/client/: client.go
cmd/game/: main.go
cmd/helpers/: create_default_save.go
cmd/server/: main.go
configs/game/: local.yml  local2.yml
game/: .gitignore  CMakeLists.txt  Makefile  go.mod  go.sum  readme.md  todo.md
game/cmake_modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
game/cmd/game/: main.go
game/include/: Buffer.h  Buffer.hpp  Components.h  ECS.h  Entity.hpp  Game.h  GameObject.h  Map.h  Math.hpp  Packet.h  Packet.hpp  Player.hpp  RenderWindow.hpp  TCPClient.h  TCPClient.hpp  TextureManager.h  Types.h  Utils.hpp
game/include/ECS/: Components.h  ECS.h
game/include/ECS/Components/: BoxColliderComponent.h  PlayerInfoComponent.h  SpriteComponent.h  SpriteTextComponent.h  TransformComponent.h
game/include/ECS/Components/ui/: TextComponent.h
game/internal/cm/: componentManager.go  componentManager_test.go
game/internal/cm/components/: components.md  player_keyboard.go  rigidbody.go  sprite.go  transform.go
game/internal/game/: game.go
game/src/: Collision.cpp  Game.cpp  GameObject.cpp  Map.cpp  buffer.cpp  ecs.cpp  entity.cpp  game.cpp  main.cpp  math.cpp  packet.cpp  player.cpp  renderwindow.cpp  tcpClient.cpp  textureManager.cpp  types.cpp
game_v2/game/: .gitignore  Makefile
internal/game/: game.go
internal/models/: types.go
internal/packets/: packets.go  payloads.go  payloads_types.go
server/: .gitignore  Makefile  app  client  go.mod  go.sum
(+51 files in other folders)
